dist/1.0/bin/sample/retrieveUnpackaged/objects/InstProdService__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Installed Product Services</relationshipLabel>
        <relationshipName>Installed_Product_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentService__c</fullName>
        <label>ParentService</label>
        <referenceTo>InstProdService__c</referenceTo>
        <relationshipLabel>Installed Product Services</relationshipLabel>
        <relationshipName>Installed_Product_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceEndDate__c</fullName>
        <label>ServiceEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceInstanceId__c</fullName>
        <description>Installed service instance ID from CSR</description>
        <label>ServiceInstanceId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceStartDate__c</fullName>
        <label>ServiceStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceStatus__c</fullName>
        <label>ServiceStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uninstalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Installed Product Service</label>
    <nameField>
        <label>InstProdService Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Product Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>